Reorganized and edited rdocker/Dockerfile and rssdocker/Dockerfile. Moved rdocker/timezone.sh to scripts folder, though the script itslef is not used. Moved scripts/loadpackages.R to rdocker. Created scripts/docker.sh as a convenience for frequently used Docker commands.

--- a/rdocker/Dockerfile
+++ b/rdocker/Dockerfile
@@ -1,8 +1,11 @@
 FROM ubuntu
 
+LABEL maintainer="Tom Woteki <drwo@vt.edu>"
+
 # update
 RUN apt-get update
 
+# set time zone
 ENV TZ="America/New_York"
 RUN apt-get install -y tzdata \
   && ln -fs /usr/share/zoneinfo/$TZ /etc/localtime \
@@ -10,31 +13,27 @@ RUN apt-get install -y tzdata \
   
 # install R
 ENV R_HOME /usr/lib/R
-RUN apt-get update && \
-  apt install -y apt-transport-https software-properties-common && \
-  apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \
-  add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/' && \
-  apt update && \
-  apt upgrade -y && \
-  apt-get install r-base r-base-core r-recommended -y
+RUN apt-get update \
+  && apt install -y apt-transport-https software-properties-common \
+  && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 \
+  && add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/' \
+  && apt update \
+  && apt upgrade -y \
+  && apt-get install r-base r-base-core r-recommended -y
 
-# create a directory for R scripts
+# create a directory for R scripts and install the load.packages script there
 RUN mkdir -p /usr/local/bin/R
-# copy the load.packages script
-COPY ./scripts/load.packages.R /usr/local/bin/R/load.packages.R
-# load package Rcpp
-RUN  chmod 775 /usr/local/bin/R/load.packages.R && \
-  Rscript /usr/local/bin/R/load.packages.R Rcpp
+COPY load.packages.R /usr/local/bin/R/load.packages.R
 
-# install these libraries needed to install R tidyverse then tidyverse itself
-RUN apt-get install -y libssl-dev && \
-  apt-get install -y libxml2-dev && \
-  apt-get install -y libcurl4-openssl-dev && \
-  Rscript /usr/local/bin/R/load.packages.R tidyverse
+# load package Rcpp needed to compile some of the other R packages we install below
+RUN  chmod 775 /usr/local/bin/R/load.packages.R \
+  && Rscript /usr/local/bin/R/load.packages.R Rcpp
 
-# install these additional pacakges
-ARG XTRA_PKGS="caTools bitops rprojroot rmarkdown knitr"
-ARG XTRA_PKGS=${XTRA_PKGS}" shiny data.table  ggmap maptools ineq"
-RUN Rscript /usr/local/bin/R/load.packages.R ${XTRA_PKGS}
+# install some linux libraries needed to install R tidyverse then tidyverse itself plus some additional packages
+RUN apt-get install -y libssl-dev \
+  && apt-get install -y libxml2-dev \
+  && apt-get install -y libcurl4-openssl-dev \
+  && Rscript /usr/local/bin/R/load.packages.R \
+    tidyverse caTools bitops rprojroot rmarkdown knitr shiny data.table  ggmap maptools ineq
 
 ENTRYPOINT ["/bin/bash", "--"]
