--- a/mysqld.cnf
+++ b/mysqld.cnf
@@ -1,6 +1,8 @@
 #
 # The MySQL database server configuration file.
 #
+# >>>>>>>> This is the config file on Mac OSX
+#
 # You can copy this to one of:
 # - "/etc/mysql/my.cnf" to set global options,
 # - "~/.my.cnf" to set user-specific options.
